added link/anchor code & styling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1>KATELYN <span class="anne">ANNE</span></h1>
         
             <ul id="thumb_list">
-                <li><img class="img_thumb" src="img/thumbs/01.jpg" /><div class="cap_holder"><h2 class="thumb_caption">BABY KATELYN</h2></div><div class="thumb_border"></div></li>
+                <li><a href="http://www.crailtap.com" ><img class="img_thumb" src="img/thumbs/01.jpg" /><div class="cap_holder"><h2 class="thumb_caption">BABY KATELYN</h2></div><div class="thumb_border"></div></a></li>
                 <li><img class="img_thumb" src="img/thumbs/02.jpg" /><div class="cap_holder"><h2 class="thumb_caption">BABY KATE</h2></div><div class="thumb_border"></div></li>
                 <li><img class="img_thumb" src="img/thumbs/03.jpg" /><div class="cap_holder"><h2 class="thumb_caption">BABY KATE</h2></div><div class="thumb_border"></div></li>
                 <li><img class="img_thumb" src="img/thumbs/04.jpg" /><div class="cap_holder"><h2 class="thumb_caption">BABY KATE</h2></div><div class="thumb_border"></div></li>
