--- a/index.html
+++ b/index.html
@@ -57,12 +57,17 @@
                 </li>
                 <li>
                     <img class="img_thumb" src="img/thumbs/baby_sushi_01.thumb.jpg" />
-                    <div class="cap_holder"><h2 class="thumb_caption">BABY SUSHI</h2></div>
+                    <div class="cap_holder"><h2 class="thumb_caption">KATELYN AS BABY SUSHI</h2></div>
                     <div class="thumb_border"></div>
                 </li>
                 <li>
                     <img class="img_thumb" src="img/thumbs/baby_sushi_02.thumb.jpg" />
                     <div class="cap_holder"><h2 class="thumb_caption">BABY SUSHI</h2>
+                    </div><div class="thumb_border"></div>
+                </li>
+                <li>
+                    <img class="img_thumb" src="img/thumbs/kate_grandma_01_thumb.jpg" />
+                    <div class="cap_holder"><h2 class="thumb_caption">KATELYN AND GRANDMA</h2>
                     </div><div class="thumb_border"></div>
                 </li>
                 
