Added hospital images

--- a/index.html
+++ b/index.html
@@ -29,6 +29,34 @@
             <ul id="thumb_list">
                 <li>
                     <a href="http://www.crailtap.com" >
+                        <img class="img_thumb" src="img/thumbs/kate_hospital_01_TN.jpg" />
+                        <div class="cap_holder"><h2 class="thumb_caption">AT THE HOSPITAL</h2></div>
+                        <div class="thumb_border"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://www.crailtap.com" >
+                        <img class="img_thumb" src="img/thumbs/kate_hospital_02_TN.jpg" />
+                        <div class="cap_holder"><h2 class="thumb_caption">AT THE HOSPITAL</h2></div>
+                        <div class="thumb_border"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://www.crailtap.com" >
+                        <img class="img_thumb" src="img/thumbs/kate_hospital_03_TN.jpg" />
+                        <div class="cap_holder"><h2 class="thumb_caption">AT THE HOSPITAL</h2></div>
+                        <div class="thumb_border"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://www.crailtap.com" >
+                        <img class="img_thumb" src="img/thumbs/kate_hospital_04_TN.jpg" />
+                        <div class="cap_holder"><h2 class="thumb_caption">AT THE HOSPITAL</h2></div>
+                        <div class="thumb_border"></div>
+                    </a>
+                </li>
+                <li>
+                    <a href="http://www.crailtap.com" >
                         <img class="img_thumb" src="img/thumbs/tuckered_out_thumb.jpg" />
                         <div class="cap_holder"><h2 class="thumb_caption">TUCKERED OUT</h2></div>
                         <div class="thumb_border"></div>
